Adds all content and most styling

--- a/index.html
+++ b/index.html
@@ -2,13 +2,26 @@
 <html>
     <head>
         <title>Excursion Download</title>
-        <link href="resources/css/" rel="stylesheet"/>
+        <link href="resources/css/style.css" rel="stylesheet"/>
     </head>
     <body>
         <header> 
             <h1>Discover hidden places in the world around you</h1>
             <a href="https://b2c109ea88334c42a26c390323872bd4.cc-propeller.cloud/#">Download Excursion (Coming Soon!)</a>
         </header>
-
+        <p><video autoplay muted loop>
+            <source src="resources/videos/excursion.mp4">
+        </video></p>
+        <section>
+            <h2>Your personal travel guide</h2>
+            <p>Excursion rememebers places you like, and recommends new points of interest around you.</p>
+            <img src="resources/images/camp.webp" alt="A camp under a starry night"/>
+        </section>
+        <footer>
+            <img src="resources/images/phone.webp" alt="phone icon"/>
+            <h2> Coming Soon for iPhone and Android</h2>
+            <a href="https://b2c109ea88334c42a26c390323872bd4.cc-propeller.cloud/#">Download Excursion (Coming Soon!)</a>
+        </footer>
+        <span class="copyright">© Excursion</span>
     </body>
 </html>
