Aligns copyright to the right

--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
             <h2> Coming Soon for iPhone and Android</h2>
             <a href="https://b2c109ea88334c42a26c390323872bd4.cc-propeller.cloud/#">Download Excursion (Coming Soon!)</a>
         </footer>
-        <span class="copyright">© Excursion</span>
+        <p class="copyright">© Excursion</p>
     </body>
 </html>
